--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ whitenoise = "==5.3.0"
 django-lifecycle = "*"
 django-filter = "*"
 django-heroku = "*"
+django-phonenumber-field = "*"
+phonenumbers = "*"
 
 [dev-packages]
 pytest-django = "*"
