--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   db:
-    container_name: database
+    container_name: database_dima
     image: postgres:14.1-alpine
     restart: always
     env_file: .env
@@ -13,7 +13,7 @@ services:
       context: .
       args:
         - DEBUG=${DEBUG}
-    container_name: backend
+    container_name: backend_dima
     env_file: .env
     restart: always
     volumes:
